# Buy-app

./: .gitignore  docker-compose.yaml  dockerfile  pyproject.toml  requirements.txt
app/: README.rst
app/bureau/: consumer.py  env.py  index.py
app/bureau/config/: kafka.py
app/bureau/models/: buy.py
app/bureau/routes/: buy.py  consumer.py  producer.py
