[tool.poetry]
name = "shop"
version = "0.1.0"
description = ""
authors = ["pedro <pluvet01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
pymongo = "^3.12"
motor = "2.5.1"
httpx = "^0.22.0"
aiokafka = "^0.7.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
